force-app/main/default/objects/Survey_Result__c/Survey_Result__c.object-meta.xml
<CustomObject>
    <description>This object is used to store results from Outgrow Surveys. The Outgrow application pushes Survey Results into this object via integration.</description>
    <label>Survey Result</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Survey result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Results</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>