force-app/main/default/objects/Survey_Result__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Survey results</relationshipLabel>
    <relationshipName>Survey_results</relationshipName>
    <type>Lookup</type>
</CustomField>