force-app/main/default/objects/Survey_Result__c/fields/Email_csm__c.field-meta.xml
<CustomField>
    <fullName>Email_csm__c</fullName>
    <formula>Case__r.CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email csm</label>
    <type>Text</type>
</CustomField>