force-app/main/default/objects/Survey_Result__c/fields/Expectations__c.field-meta.xml
<CustomField>
    <fullName>Expectations__c</fullName>
    <label>Enter Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>