force-app/main/default/objects/Survey_Result__c/fields/Knowledge_of_customer_service_rep__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_of_customer_service_rep__c</fullName>
    <label>Knowledge of customer service rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>