force-app/main/default/objects/Survey_Result__c/fields/Process_of_getting_problem_resolved__c.field-meta.xml
<CustomField>
    <fullName>Process_of_getting_problem_resolved__c</fullName>
    <label>Process of getting problem resolved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>