force-app/main/default/objects/Survey_Result__c/fields/Time_taken_to_solve_my_issue__c.field-meta.xml
<CustomField>
    <fullName>Time_taken_to_solve_my_issue__c</fullName>
    <label>Time taken to solve my issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>