force-app/main/default/objects/Survey_Result__c/recordTypes/Master.recordType-meta.xml
<RecordType>
    <fullName>Master</fullName>
    <active>true</active>
    <label>Master</label>
</RecordType>